# zelkova

./: .gitignore  Cargo.toml  README.md
examples/: add.rs  arithmetic.rs  test.rs
src/: interface.rs  lib.rs  models.rs  shader.rs  shader.wgsl
src/api/: bundle.rs  core.rs  error.rs  instance.rs  interface.rs  mod.rs  node.rs  tensor.rs
src/codegen/: builder.rs  mod.rs  shader.rs  spirv.rs  wsgl.rs
src/codegen/backends/: mod.rs
src/core/: bundle.rs  error.rs  instance.rs  interface.rs  mod.rs  ops.rs
src/helper/: mod.rs  tracker.rs
src/internals/: buffer.rs  context.rs  handler.rs  mod.rs  shader.rs
src/models/: mod.rs  tensor.rs
src/shaders/: builder.rs  interface.rs  mod.rs
src/types/: bf16.rs  bounds.rs  extension.rs  f16.rs  f8.rs  mod.rs
