[package]
name = "zelkova"
version = "0.1.2"
edition = "2021"

[dependencies]
bitflags = { version = "2.3.1", default-features = false }
bytemuck = { version = "1.13.1", default-features = false }
pollster = { version = "0.3.0", default-features = false }
wgpu = { version = "0.16.2", default-features = false, features = ["expose-ids", "wgsl"] }

[features]
default = ["wsgl"]
wsgl = []
spirv = []